=========
Changelog
=========

This file keeps track of all notable changes to the Slurm Charms.

Unreleased
----------

- add .jujuignore to reduce size of final charm files
- fix cache of partition_name in slurmd charm
- improve description of charm's state in juju status
- fix race condition on relation data exchange between slurmctld and slurmdbd
- change default partition name from juju-compute-random to osd-appname
- fix slurmctld crashing when removing a slurmd application

0.6.6 - 2021-07-01
------------------

- fix checks for munge when the code can't run subprocess as another UID

0.6.5 - 2021-06-28
------------------

- fix race condition on inventory synchronization between slurmd and slurmctld
  before starting slurmd
- fix breakage in charms when the slurmd leader is removed
- remove unused code in slurmd peer relation
- fix slurmd action to query infiniband version
- add slurmrestd to CentOS7
- fix slurmrestd Systemd environment variables to enable jwt auth

0.6.4 - 2021-06-11
------------------

- improve checks on Systemd commands to start/restart daemons, as to guarantee
  correct Charm initialization
- check for munge keys before starting Slurm daemons, to avoid a race condition
- fix possible breakage in Slurm configuration due to spaces in partition names
- improve description of configurations and actions.
- fix slurmrestd version in Juju status breaking the line.

0.6.3 - 2021-06-02
------------------

- fix systemd command to restart munge
- improve slurmdbd logs when restarting munge

0.6.2 - 2021-06-02
------------------

- handle charm upgrade
- improve juju status' message to display failure when munge/slurm does not
  start correctly
- fix slurmd initialization when slurm.conf is present
- enable munge system service, so it always start when the machine boots

0.6.1 - 2021-05-31
------------------

- changed charm's status message to have consistent capitalization.