@@ -49,6 +49,7 @@ class SlurmctldCharm(CharmBase):
         event_handler_bindings = {
             self.on.install: self._on_install,
             self.on.upgrade_charm: self._on_upgrade,
+            self.on.update_status: self._on_update_status,
             self.on.config_changed: self._on_write_slurm_config,
             self._slurmdbd.on.slurmdbd_available: self._on_slurmdbd_available,
             self._slurmdbd.on.slurmdbd_unavailable: self._on_slurmdbd_unavailable,
@@ -176,6 +177,10 @@ class SlurmctldCharm(CharmBase):
     def _on_upgrade(self, event):
         """Perform upgrade operations."""
         self.unit.set_workload_version(Path("version").read_text().strip())
+
+    def _on_update_status(self, event):
+        """Handle update status."""
+        self._check_status()
 
     def _check_status(self):
         """Check for all relations and set appropriate status.
