@@ -7,6 +7,7 @@ This file keeps track of all notable changes to the Slurm Charms.
 Unreleased
 ----------
 
+- handle update-status hook to constantly give feedback about charms' status
 - add .jujuignore to reduce size of final charm files
 - fix cache of partition_name in slurmd charm
 - improve description of charm's state in juju status
